2000-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c: Add stubs to work with ../ntpd/ntp_config.o,
	start hooking things up.

	* ntpd/ntp_config.c (getconfig): 
	* ntpd/ntpd.c: Initialize "debug" here, not in ntp_config.c

	* util/Makefile.am (ntp_genkeys_LDADD): Added ../ntpd/ntp_config.o
	* util/Makefile.am (ntp_genkeys_DEPENDENCIES): Added.

2000-07-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k4
	* util/ntp-genkeys.c: Start hacking for new functionality.
	* include/Makefile.am (noinst_HEADERS): Added ntp_cmdargs.h and
	ntp_config.h .
	* ntpd/ntp_config.c: Grab ntp_cmdargs.h.  Make some new globals
	(ugh), move ntpd-specific variables and code to cmd_args.c .
	* ntpd/cmd_args.c: Move command argument processing functions from
	ntp_config.c to this file.
	* ntpd/Makefile.am (ntpd_SOURCES): Added cmd_args.c
	* include/ntpd.h: Move getstartup() to ntp_cmdargs.h
	* include/ntp_cmdargs.h: New file
	Begin the hacking fest to make it easier for ntp-genkeys to use
	ntpd's config processing code.  I really hope this is the lesser
	of the evils...
	
2000-07-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (usage): Added.

	* ntpd/ntp_crypto.c: Cleanup
	* ntpd/ntp_proto.c (transmit): Add some parens.
	(peer_xmit): Add ntohl when grabbing sndauto.seq for broadcast.
	* ntpd/ntp_peer.c (findpeer): Cleanup
	* ntpd/ntp_loopfilter.c (local_clock): Typo
	From Dave Mills

	* include/ntp_config.h: Created

	* util/ntp-genkeys.c: Always build, but realize we may not have
	RSAREF.  Compile parts appropriately.

	* util/Makefile.am (bin_PROGRAMS): Always make ntp-genkeys
	(ntp-genkeys_LDADD): Use $LIBRSAREF instead of the "real path"
	* configure.in: Lose MAKE_NTP_GENKEYS

	* configure.in: 
	* util/ntp-genkeys.c: 
	* util/Makefile.am:
	Renamed ntp_genkeys to ntp-genkeys.

2000-07-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpdate/ntpdate.c (ntpdatemain): Cleanup error message.
